WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
22182
scrollbars like in youtube's "related" box don't work as expected
https://bugs.webkit.org/show_bug.cgi?id=22182
Summary
scrollbars like in youtube's "related" box don't work as expected
Alexander Kempgen
Reported
2008-11-11 12:17:33 PST
1) the up/down arrows don't scroll in small steps, but instead jump to the beginning/end of the list. 2) the scrollbar handle does not center on the vertical position of the mouse pointer when grabbed, but is below it instead.
Attachments
Patch
(2.15 KB, patch)
2008-11-11 12:33 PST
,
Dave Hyatt
adele
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2008-11-11 12:18:53 PST
I cannot reproduce this. They work just fine for me.
Dave Hyatt
Comment 2
2008-11-11 12:24:47 PST
WHen click is set to "Jump to here" I can repro.
Dave Hyatt
Comment 3
2008-11-11 12:33:36 PST
Created
attachment 25049
[details]
Patch
Dave Hyatt
Comment 4
2008-11-11 12:44:23 PST
Fixed in
r38312
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug